Changed some items in Main.handlebars. Created server.js file. Created public view and added content.

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 
 <body>
     {{{ body }}}
-    <img src="/assets/img/burger.png" alt="Burger" style="width:400px;height:350px; display: block; margin: auto">
+    <img src="/assets/img/burger.jpg" alt="Burger" style="width:400px;height:350px; display: block; margin: auto">
 </body>
 
 </html>
