--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,53 +1,70 @@
-<h1>Eat-Da-Burger</h1>
+<div class="jumbotron">
+    <h1>EAT-DA-BURGER</h1>
+</div>
+
+<div class="row">
+    <div id="add">
+        <h2>ORDER A BURGER</h2>
+        <form class="create-update-form" action="/" method="POST">
+
+            <div class="form-group">
+                <label for="ca">Select a burger from the menu.</label>
+                <select class="form form-control" type="text" id="ca" name="burger_name">
+                    <option>Single Hamburger</option>
+                    <option>Double Hamburger</option>
+                    <option>Triple Hamburger</option>
+                    <option>Single Cheeseburger</option>
+                    <option>Double Cheeseburger</option>
+                    <option>Triple Cheeseburger</option>
+                    <option>Bacon Cheeseburger</option>
+                    </select>
+            </div>
+
+            <button class="btn btn-warning" type="submit">ORDER DA-BURGER!</button>
+        </form>
+
+    </div>
+</div>
+<br>
+<div class="row">
+    <div class="col-lg-2">
+        <img class="img-thumbnail img-responsive" src="/assets/img/burger.png" alt="Burger">
+    </div>
+    <div class="col-lg-4">
+        <div id="new">
+            <h2>BURGER READY TO EAT</h2>
 
 
-<div id="add">
-    <h2>Add a Burger</h2>
-    <form class="create-update-form" action="/" method="POST">
+            <ul>
+                {{#each burger}} {{#unless this.devoured}}
+                <li>
+                    {{this.burger_name}}
 
-        <div class="form-group">
-            <label for="ca">Burger Name:</label>
-            <input type="text" id="ca" name="burger_name">
+                    <form action="/{{this.id}}?_method=PUT" method="POST">
+                        <input type="hidden" name="devoured" value="true">
+                        <button class="btn btn-danger" type="submit">EAT-DA-BURGER!</button>
+                    </form>
+
+                </li>
+                {{/unless}} {{/each}}
+            </ul>
         </div>
+    </div>
+    <div class="col-lg-4">
+        <div id="devour">
+            <h2>BURGERS DEVOURED</h2>
 
-        <button type="submit">Add Burger</button>
-    </form>
+            <ul>
+                {{#each burger}} {{#if this.devoured}}
+                <li>
+                    {{this.burger_name}}                    
 
-</div>
-
-<div id="new">
-    <h2>New Burgers Added</h2>
-
-
-    <ul>
-        {{#each burger}} {{#unless this.devoured}}
-        <li>
-            {{this.burger_name}}
-
-            <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devoured" value="true">
-                <button type="submit">LET'S EAT!</button>
-            </form>
-
-        </li>
-        {{/unless}} {{/each}}
-    </ul>
-</div>
-
-<div id="devour">
-    <h2>Burgers Devoured</h2>
-
-    <ul>
-        {{#each burger}} {{#if this.devoured}}
-        <li>
-            {{this.burger_name}}
-
-            <form action="/{{this.id}}?_method=PUT" method="POST">
-                <input type="hidden" name="devoured" value="false">
-                <button type="submit">EAT-DA-BURGER!</button>
-            </form>
-
-        </li>
-        {{/if}} {{/each}}
-    </ul>
+                </li>
+                {{/if}} {{/each}}
+            </ul>
+        </div>
+    </div>
+    <div class ="col-lg-2">
+<img class="img-thumbnail img-responsive" src="/assets/img/burger.png" alt="Burger">
+    </div>
 </div>
