--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,8 +14,10 @@
 </head>
 
 <body>
-    {{{ body }}}
-    <img src="/assets/img/burger.jpg" alt="Burger" style="width:400px;height:350px; display: block; margin: auto">
+    <div class="container">
+        {{{ body }}}
+    </div>
+
 </body>
 
 </html>
