--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,10 +1,16 @@
 body {
     background-color: #c1c5c8;
 }
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+}
 .jumbotron {
     background-color: #c1c5c8;
-    padding: 0;
-    text-align: center;
+    padding: 0; 
+    text-align: center; 
 }
 
 button {
@@ -12,7 +18,7 @@ button {
 }
 
 img {
-    width: 30px;
+    width: 75px;  
 }
 
 h1,
