--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,26 +6,26 @@
 
 <div class="row">
     <div class="col-lg-2">
-    
+
     </div>
     <div class="col-lg-4">
         <h4>
-        #1 Single Hamburger......................$5.99
-        <br> #2 Double Hamburger......................$6.99
-        <br> #3 Triple Hamburger......................$7.99
-        <br>
+            #1 Single Hamburger......................$5.99
+            <br> #2 Double Hamburger......................$6.99
+            <br> #3 Triple Hamburger......................$7.99
+            <br>
         </h4>
     </div>
     <div class="col-lg-4">
         <h4>
-        #1 Single Cheeseburger......................$6.50
-        <br> #2 Double Cheeseburger......................$7.50
-        <br> #3 Triple Cheeseburger......................$8.50
-        <br>
+            #4 Single Cheeseburger......................$6.50
+            <br> #5 Double Cheeseburger......................$7.50
+            <br> #6 Triple Cheeseburger......................$8.50
+            <br>
         </h4>
     </div>
     <div class="col-lg-2">
-    
+
     </div>
 
 </div>
@@ -45,6 +45,8 @@
                     <option>Double Cheeseburger</option>
                     <option>Triple Cheeseburger</option>
                 </select>
+                <label for="ca">Your Name</label>
+                <input class="form form-control" type="text" id="ca" name="person_name">
             </div>
 
             <button class="btn btn-warning" type="submit">ORDER DA-BURGER!</button>
@@ -65,11 +67,16 @@
             <ul>
                 {{#each burger}} {{#unless this.devoured}}
                 <li>
-                    {{this.burger_name}}
+                    <strong>Order Number:</strong> #{{this.id}}
+                    <br>
+                    <strong>Burger Ordered:</strong> {{this.burger_name}}
+                    <br>
+                    <strong>Ordered by:</strong> {{this.person_name}}
+                    <br>
 
                     <form action="/{{this.id}}?_method=PUT" method="POST">
                         <input type="hidden" name="devoured" value="true">
-                        <button class="btn btn-danger" type="submit">EAT-DA-BURGER!</button>
+                        <button class="btn btn-danger" type="submit">EAT-DA-BURGER, {{this.person_name}}!</button>
                     </form>
 
                 </li>
@@ -84,7 +91,12 @@
             <ul>
                 {{#each burger}} {{#if this.devoured}}
                 <li>
-                    {{this.burger_name}}
+                    <strong>Order Number:</strong> #{{this.id}}
+                    <br>
+                    <strong>Burger Devoured:</strong> {{this.burger_name}}
+                    <br>
+                    <strong>Eaten by:</strong> {{this.person_name}}
+                    <br>
 
                 </li>
                 {{/if}} {{/each}}
